--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
     <groupId>nl.iobyte</groupId>
     <artifactId>menuapi</artifactId>
     <version>1.1</version>
+         
+    <repositories>
+         <repository>
+              <id>spigot-repo</id>
+              <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+         </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
